--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 <html>
     <head>
-
+        <link rel="stylesheet" href="style.css">
+        <title>
+            To Do List
+        </title>
     </head>
     <body>
-        <h1>To Do List</h1>
+        <div>
+        <h1><b>Syncly</b></h1>
+        <table>
+            
+        </table>
+        </div>
+        <nav>
+            <ul >
+                <li>Home</li>
+                <li>My Lists</li>
+                <li></li>
+                <li>Help</li>
+                <li>Contact Us</li>
+            </ul>
+        </nav>
     </body>
 </html>
