--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <ul >
                 <li>Home</li>
                 <li>My Lists</li>
-                <li></li>
+                <li>Appearance</li>
+                <li>Settings</li>
                 <li>Help</li>
                 <li>Contact Us</li>
             </ul>
