--- a/index.html
+++ b/index.html
@@ -7,68 +7,15 @@
     <title>Syncly - To-Do List Manager</title>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <div class="logo-title">
-                <div class="logo">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M7 13l3 3 7-7"></path>
-                        <circle cx="12" cy="12" r="10"></circle>
-                    </svg>
-                </div>
-                <h1>Syncly</h1>
-            </div>
-            <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
-                🌙 Dark Mode
-            </button>
-        </header>
+  <!-- Top green bar -->
+  <header class="top-bar">
+    <div class="top-bar__title" data-i18n="title">SYNCLY</div>
 
-        <div class="list-manager">
-            <input 
-                type="text" 
-                id="newListInput" 
-                placeholder="Create new list..."
-                aria-label="New list name"
-            >
-            <button id="createListBtn" aria-label="Create list">+ Create List</button>
-        </div>
-
-        <div class="list-tabs" id="listTabs"></div>
-
-        <div class="input-section">
-            <div class="input-group">
-                <div class="input-row">
-                    <input 
-                        type="text" 
-                        id="todoInput" 
-                        placeholder="Add a new task..." 
-                        aria-label="New task input"
-                    >
-                    <input 
-                        type="time" 
-                        id="timeInput"
-                        aria-label="Task time"
-                    >
-                    <button id="addBtn" aria-label="Add task">Add Task</button>
-                </div>
-            </div>
-            <div class="action-buttons">
-                <button id="undoBtn" disabled aria-label="Undo">↶ Undo</button>
-                <button id="redoBtn" disabled aria-label="Redo">↷ Redo</button>
-                <button id="clearCompletedBtn" aria-label="Clear completed tasks">Clear Completed</button>
-                <button id="clearAllBtn" aria-label="Clear all tasks">Clear All</button>
-            </div>
-        </div>
-
-        <div class="todo-list" id="todoList">
-            <div class="empty-state">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M9 11l3 3L22 4"></path>
-                    <path d="M21 12v7a2 2 0 01-2 2H5a2 2 0 01-2-2V5a2 2 0 012-2h11"></path>
-                </svg>
-                <p>No tasks yet. Add one to get started!</p>
-            </div>
-        </div>
+    <div class="top-bar__lang row">
+      <label for="lang-select" data-i18n="languageLabel">Language</label>
+      <select id="lang-select">
+        <option value="en">English</option>
+        <option value="hi">हिन्दी</option>
+      </select>
     </div>
-</body>
-</html>
+  </header>    
