--- a/index.html
+++ b/index.html
@@ -72,3 +72,15 @@
           <button type="button" id="redo-btn" data-i18n="redoButton">Redo</button>
         </div>
       </section>
+    <!-- Task list + pagination -->
+      <section class="panel" aria-label="Task list">
+        <h2 class="visually-hidden">Tasks</h2>
+        <ul id="task-list" class="task-list" role="list"></ul>
+
+        <div class="pagination" aria-label="Task pages">
+          <button type="button" id="prev-page" data-i18n="previousButton">&lt;</button>
+          <span id="page-info">1 / 1</span>
+          <button type="button" id="next-page" data-i18n="nextButton">&gt;</button>
+        </div>
+      </section>
+        
