--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylish.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Syncly - To-Do List Manager</title>
 </head>
 <body>
@@ -120,7 +120,7 @@
   </main>
     
     <!-- Entry script (ES6 module) -->
-  <script type="module" src="js/main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html> 
         
