Bold the 'New Task' label in the form

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <!-- Add task -->
       <section class="panel" aria-label="Add task">
         <form id="task-form">
-          <label for="task-input" data-i18n="newTaskLabel">New task</label>
+          <label for="task-input" data-i18n="newTaskLabel"><strong>New Task</strong></label>
           <div class="row">
             <input
               id="task-input"
